# idet

./: .clang-format  .gitignore  COC.md  README.md  flatpak.yml  meson.build
src/: actions.cxx  actions.h  baseaction.h  common.h  ctrlspc.cxx  ctrlspc.h  editor.cxx  editor.h  inputacts.cxx  main.c  main.cxx  meson.build  queueaction.h  text.cxx  text.h
