idet_sources = [
  'main.cxx',
  'editor.cxx',
  'inputacts.cxx',
  'editor.h',
  'ctrlspc.cxx',
  'ctrlspc.h',
  'actions.h',
  'actions.cxx',
  'text.h',
  'text.cxx',
  'common.h',
  'queueaction.h'
]

depends = [
  dependency('gtkmm-4.0'),
]

executable('idet',
  idet_sources,
  install : true,
  dependencies : depends
)
